fixed spacing in header

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,12 @@ body {
   font-family: 'Nunito', sans-serif;
 }
 
+body a {
+  margin: 10px;
+  font-weight: bolder;
+  color: #974c2d;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -16,43 +22,8 @@ body {
   background-color: #322925;
 }
 
-#skills {
-  list-style-type: none;
-}
-
-#profPic {
-  padding: 20px;
-  max-width: 100%;
-  border-radius: 50%;
-  filter: grayscale(40%);
+#headerA {
   margin-left: -20px;
-}
-
-.footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 30px;
-  padding: 3px;
-  text-align: center;
-  background-color: #322925;
-}
-
-.header a {
-  margin: 10px;
-  color: #974c2d;
-  font-weight: bolder;
-}
-
-.footer a {
-  margin: 10px;
-
-  font-weight: bolder;
-}
-
-body a {
-  color: #974c2d;
 }
 
 #name {
@@ -60,14 +31,11 @@ body a {
   font-weight: 600;
   font-size: 20px;
   color: #a3998b;
-}
-
-#mainHead {
-  text-align: center;
+  margin-right: -180px;
 }
 
 #splash {
-  background: url("/assets/images/splash.jpg") no-repeat center center fixed;
+  background: url("/assets/images/splash.jpg") no-repeat center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -83,11 +51,27 @@ body a {
   /*filter:grayscale(60%);*/
 }
 
+#skills {
+  list-style-type: none;
+}
+
+#mainHead {
+  text-align: center;
+}
+
 #about {
   background-color: #695849;
   padding: 15px 20px 30px 20px;
   margin-right: -115px;
   margin-left: -115px;
+}
+
+#profPic {
+  padding: 20px;
+  max-width: 100%;
+  border-radius: 50%;
+  filter: grayscale(40%);
+  margin-left: -20px;
 }
 
 #portfolio {
@@ -102,4 +86,15 @@ body a {
   padding: 15px 20px 30px 20px;
   margin-right: -115px;
   margin-left: -115px;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 30px;
+  padding: 3px;
+  text-align: center;
+  background-color: #322925;
 }
